work on documentation and example 4

--- a/Docs/sound_effects_player_example_04.tex
+++ b/Docs/sound_effects_player_example_04.tex
@@ -91,11 +91,11 @@
   pdfcontactregion={New Hampshire},
   pdfcontacturl={https://www.systemeyescomputerstore.com},
   pdfcopyright={Copyright {\copyright} 2020 by John Sauter},
-  pdfdate={2020-07-07},
+  pdfdate={2020-07-11},
   pdflicenseurl={https://creativecommons.org/licenses/by-sa/4.0},
   pdfmetalang={en-US}  
 }
-\date{2020-07-07}
+\date{2020-07-11}
 \maketitle
 \begin{abstract}
   How to produce sound effects for live theatrical performances
@@ -393,7 +393,7 @@ are stopped.
 As Eve bites, make the sound of an apple being bitten into.
 \inputminted[firstline=252,lastline=258]{xml}
             {../examples/04/Example_04_sounds.xml}
-\inputminted[firstline=189,lastline=205]{xml}
+\inputminted[firstline=189,lastline=206]{xml}
             {../examples/04/Example_04_sound_sequence.xml}
 
 \subsubsection{Act 01 Scene 02 Page 033b: Eve Departs}
@@ -416,7 +416,7 @@ the sound to eliminate all frequencies over 100 Hz and fed that
 to the LFE1 speaker, under the stage.
 \inputminted[firstline=260,lastline=316]{xml}
             {../examples/04/Example_04_sounds.xml}
-\inputminted[firstline=207,lastline=225]{xml}
+\inputminted[firstline=208,lastline=226]{xml}
             {../examples/04/Example_04_sound_sequence.xml}
 
 That's all the sounds we will need in scene 2.  When it is over
@@ -424,7 +424,7 @@ stop them so we can use those same clusters for the sounds
 in scene 3.  However, leave the water sound available
 because we will need it in the next scene.
 
-\inputminted[firstline=227,lastline=270]{xml}
+\inputminted[firstline=228,lastline=271]{xml}
             {../examples/04/Example_04_sound_sequence.xml}
             
 \subsection{Act 01 Scene 03 Page 043: The Wasteland}
@@ -434,7 +434,7 @@ nearby, so we will continue to have the sound of running water
 available, as we did in the Garden of Eden.
 \inputminted[firstline=318,lastline=357]
             {xml}{../examples/04/Example_04_sounds.xml}
-\inputminted[firstline=272,lastline=280]{xml}
+\inputminted[firstline=273,lastline=281]{xml}
             {../examples/04/Example_04_sound_sequence.xml}
 
 \subsubsection{Act 01 Scene 03 Page 044: Birth of Cain and Abel}
@@ -443,7 +443,7 @@ with the name of the baby.
 
 \inputminted[firstline=359,lastline=368]{xml}
             {../examples/04/Example_04_sounds.xml}
-\inputminted[firstline=282,lastline=318]{xml}
+\inputminted[firstline=283,lastline=319]{xml}
             {../examples/04/Example_04_sound_sequence.xml}
 
 \subsubsection{Act 01 Scene 03 Page 061: Eve slaps Cain}
@@ -461,14 +461,14 @@ adding this sound:
 
 \inputminted[firstline=370,lastline=422]{xml}
             {../examples/04/Example_04_sounds.xml}
-\inputminted[firstline=320,lastline=337]{xml}
+\inputminted[firstline=321,lastline=338]{xml}
             {../examples/04/Example_04_sound_sequence.xml}
 
 \subsubsection{Act 01 Scene 03 Page 065: Distant Rumble of Thunder}
 Use the rear speakers only, to convey that the thunder is distant.
 \inputminted[firstline=424,lastline=481]{xml}
             {../examples/04/Example_04_sounds.xml}
-\inputminted[firstline=339,lastline=357]{xml}
+\inputminted[firstline=340,lastline=358]{xml}
             {../examples/04/Example_04_sound_sequence.xml}
 
 \subsubsection{Act 01 Scene 03 Page 069: Adam Strikes Cain}
@@ -481,7 +481,7 @@ That works for slapstick but not for Children of Eden.
 
 \inputminted[firstline=483,lastline=489]{xml}
             {../examples/04/Example_04_sounds.xml}
-\inputminted[firstline=359,lastline=376]{xml}
+\inputminted[firstline=360,lastline=377]{xml}
             {../examples/04/Example_04_sound_sequence.xml}
 
 \subsubsection{Act 01 Scene 03 Page 070: Adam Strikes Cain Again}
@@ -493,7 +493,7 @@ effects operator can push the button for each blow.
 
 \inputminted[firstline=491,lastline=497]{xml}
             {../examples/04/Example_04_sounds.xml}
-\inputminted[firstline=378,lastline=395]{xml}
+\inputminted[firstline=379,lastline=396]{xml}
             {../examples/04/Example_04_sound_sequence.xml}
 
 \subsection{Act 01 Scene 04 Page 072a: The Mark of Cain}
@@ -507,26 +507,37 @@ operator can adjust them as needed.  They slowly fade in when he starts them.
 
 \inputminted[firstline=499,lastline=582]{xml}
   {../examples/04/Example_04_sounds.xml}
-\inputminted[firstline=397,lastline=425]{xml}
-            {../examples/04/Example_04_sound_sequence.xml}
+\inputminted[firstline=398,lastline=436]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
 
 \subsection{Act 01 Scene 04 Page 072b: The Mark of Cain}
 When Father first calls out to Cain there is thunder from
 all four speakers, but it ends just before Father calls out
 a second time.
 
-\subsubsection{Act 01 Scene 04 Page 073: Cain is Marked}
+\inputminted[firstline=584,lastline=635]{xml}
+  {../examples/04/Example_04_sounds.xml}
+\inputminted[firstline=438,lastline=456]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
+
+\subsubsection{Act 01 Scene 04 Page 073a: Cain is Marked}
 When Father and Storytellers sing
 ``the race of Cain must ever bear this mark!''
 there is immediately a flash of lightning and a loud crash of thunder.
 I know that thunder is supposed to follow lightning, but I did not
 want to wait for the lighting guys so I told them that I had rehearsed
 the thunder and knew just when it should sound, and they should do
-their best to keep up.
-When Cain exits and Eve enters we transition to a new scene,
-back in the wilderness.  The wind and rain fade out for five seconds.
+their best to keep up.  I used the sound from page 42.
 
-\subsection{Act 01 Scene 05 Page 073: Eve Enters}
+\inputminted[firstline=458,lastline=483]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
+
+\subsubsection{Act 01 Scene 04 Page 073b: Cain is Marked}
+When Cain exits and Eve enters we transition to a new scene,
+back in the wilderness.  The sound effects operator stops
+the rain and wind sounds.  They fade out over five seconds.
+
+\subsection{Act 01 Scene 05 Page 073c: Eve Enters}
 Use the same wilderness background as for scene 3.
 
 \subsection{Intermission}
@@ -535,85 +546,150 @@ there is an optional safety announcement
 as the audience is taking their seats.  I have included the one
 from the Souhegan High School in Amherst, NH.
 
+\inputminted[firstline=485,lastline=584]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
+
 \subsection{Act 02 Scene 01 Page 081: Generations of Adam}
 The background should be of a nice place, with a hint of a distant
-stream and the occasional insect.  It is not as alive as the garden,
-but not as dead as the wasteland.
+stream and the occasional insect.  It is not as alive as the Garden
+of Eden, but not as dead as the wasteland.
+I didn't provide any sound here for exercise 4.
 
 \subsubsection{Act 02 Scene 01 Page 91: Noah Pounds}
 Thud as Noah pounds in the last peg of gopher wood.
-This is probably better done live.
+This is probably better done live, or you can use the bonk
+from page 071.
 
 \subsubsection{Act 02 Scene 01 Page 101: Animals Appear}
 Each animal has an introductory sound: bunnies, turtles, chimps,
 panthers, birds, frogs, mike, zebras, ostriches, giraffes and elephants.
-Since their order is well-defined, we can present each to the sound
+
+\inputminted[firstline=637,lastline=859]{xml}
+  {../examples/04/Example_04_sounds.xml}
+
+Since the order of their appearance is well-defined,
+we can present each to the sound
 effects operator when the previous one has completed.  This lets us
 use the same button for each sound--the sound effects operator
 just presses ``Start'' when the next animal appears.
+He can end a sound early if necessary by pressing ``Stop''.
+The label on the cluster shows the current or next animal, and
+after the last animal it is blank.
+
+\inputminted[firstline=586,lastline=867]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
 
 \subsubsection{Act 02 Scene 01 Page 103: Thunder}
 The script calls for just one thunder on this page, but the director
-has asked for four: a very distant, very bass rumble at the top
+of the 2010 Amherst PTA play asked for four:
+a very distant, very bass rumble at the top
 of the page, a closer rumble at ``not a stranger to the rain'',
 closer yet at ``sacred and profane'', and even closer at ``let it rain'',
 which is where the script calls for thunder.
+
+\inputminted[firstline=861,lastline=975]{xml}
+  {../examples/04/Example_04_sounds.xml}
+\inputminted[firstline=869,lastline=994]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
 
 \subsubsection{Act 02 Scene 01 Page 107: Thunder}
 As Japheth and Yonah kiss, there is a close rumble of thunder.
 Use all four speakers, though mostly in the rear.
 When Japheth says ``come on!'' there is a louder and closer
 thunder clap.  Use front and rear speakers equally.
+We can use the same cluster as the thunders on page 103.
+
+\inputminted[firstline=977,lastline=1045]{xml}
+  {../examples/04/Example_04_sounds.xml}
+\inputminted[firstline=996,lastline=1041]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
 
 \subsection{Act 02 Scene 02 page 108: Rain}
-The rain starts, mostly in the front speakers.  This starts a new scene.
+The script suggests that the rain should start here, saying
+``the thunderstorm breaks on the scene in earnest''.
+Instead of starting a new scene here, we will just
+have the rain as another sound effect, since the director
+might want it to start in a different place.
+
+\inputminted[firstline=1047,lastline=1088]{xml}
+  {../examples/04/Example_04_sounds.xml}
+\inputminted[firstline=1043,lastline=1064]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
 
 \subsubsection{Act 02 Scene 02 Page 109: Thunder}
-On ``Hurricane'' the rain starts.
+The director might specify that the rain starts,
+or perhaps gets louder, on ``An endless hurricane''.
+
 After ``forever will it rain'' there is a flash of lightning
 and a big clap of thunder.  Start it in the rear speakers
 and move it quickly to the front.
-After ``and now I feel so old'' there is another thunder.
+After ``And now I feel so old'' there is another thunder.
+Tack these two thunders onto the ones from pages 103 and 107.
+
+\inputminted[firstline=1090,lastline=1135]{xml}
+  {../examples/04/Example_04_sounds.xml}
+\inputminted[firstline=1066,lastline=1091]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
 
 \subsection{Act 02 Scene 03 Page 110: On the Deck of the Ark}
 There is rain falling onto the gopher-wood ark.
 The rain is mostly in the front speakers.
 There is also wind, using all four speakers.
+We can use the same sound as page 072.
+
+\inputminted[firstline=1093,lastline=1111]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
 
 \subsubsection{Act 02 Scene 03 Page 114: Bird Call}
 There is a bird sound from a birdcage.  Put this in the speaker
 closest to the birdcage.
 
+\inputminted[firstline=1137,lastline=1151]{xml}
+  {../examples/04/Example_04_sounds.xml}
+\inputminted[firstline=1113,lastline=1134]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
+
 \subsubsection{Act 02 Scene 03 Page 116: Commotion of People and Animals}
-Use the front speakers only.
+We can re-use a sound from act 1.
+\inputminted[firstline=1136,lastline=1153]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
 
 \subsubsection{Act 02 Scene 03 Page 118: Noah Strikes Japheth}
 Use the same slap as in act 1 when Adam struck Cain.
+\inputminted[firstline=1155,lastline=1222]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
 
-\subsubsection{Act 02 Scene 03 Page 119: Noah Strikes Japheth Again}
-Use the same sound as in act 1 when Adam fights Cain.
+\subsubsection{Act 02 Scene 03 Page 119a: Noah Strikes Japheth Again}
+The same sound again.
+
+\subsubsection{Act 02 Scene 03 Page 119b: Wind stops}
 When Yonah says ``No!'' stop the wind.
-
-\subsubsection{Act 02 Scene 03 page 118: Noah Bangs Staff}
-This is probably better done live.  If the director disagrees
-you can use the same thud as the one on page 91.
+This is not called for in the script, but it is a good time
+for the wind to stop.
 
 \subsubsection{Act 02 Scene 03 Page 126: Rain Fades}
 When Japheth says ``Look!'', start to fade the rain.
 The release time should be 15 seconds, so the rain is gone
-by the time Mama says ``An olive tree.''.
+by the time Mama says ``An olive tree'' on page 127.
+To facilitate this, the release time on the rain is 15 seconds,
+so the sound effects operator just pushes Stop at the right time.
 
 \subsection{Act 02 Scene 04 Page 130: Back on Land}
 This scene is ``early one morning a few weeks later''.
-Use the same background sound as for scene 1.
+We can re-use a sound from act 1.
+\inputminted[firstline=1223,lastline=1239]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
 
 \subsection{After the Show}
 When the last curtain has fallen, play some nice music as the audience
 is leaving.
+\inputminted[firstline=1241,lastline=1278]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
 
 \section{Try it}
 You can experience the show from the point of view of the sound
-effects operator by running example 4 from sound\_effects\_player.
+effects operator by running example 4 from sound\_effects\_player
+while reading the script.
   
 \section{Acknowledgments}
 
@@ -660,11 +736,14 @@ and in must cases combined it with other sounds.
   Creative Commons 0 license.
 \item[427401]imjeax: ``desert ambient loop''
 This file uses these sounds from Freesounds:
-\begin{itemize}
-\item wind-noise.wav by jorge0000 (\url{https://freesound.org/people/jorge0000/sounds/361053/})
-\item Sandy Breeze (foley) by FableVision Studios (\url{https://freesound.org/people/FableVision_Studios/sounds/182868/})
-\item DMP-009007-SILENCE DESERT.wav by martypinso (\url{https://freesound.org/people/martypinso/sounds/23143/})
-\end{itemize}
+\begin{description}
+\item[23143]martypinso: ``DMP-009007-SILENCE DESERT''
+  Creative Commons 0 license.
+\item[182868]FableVision\_Studios: ``Sandy Breeze (foley)''
+  Creative Commons 0 license.
+\item [361053]jorge000: ``wind-noise''
+  Creative Commons 0 license.
+\end{description}
 Creative Commons Attribution license.
 \item[430765]joedeshon: ``long easy rain 08''
   Rain.  Creative Commons 0 license.
