--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 0.128, July 10, 2020
+  Continue work on the documentation and example 4.
+  
 Version 0.127, July 8, 2020
   Fix a problem displaying the remaining time of a released sound.
   
