--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Version 0.129, April 17, 2021
+  Improve the cleanup after the build.  Add a pgp signature of the tarball
+  to the repository.
+  
 Version 0.128, July 10, 2020
   Continue work on the documentation and example 4.
   
